--- a/public/css/test.css
+++ b/public/css/test.css
@@ -6,7 +6,7 @@ body {
 
     font-family: "Segoe UI", Arial, Helvetica, sans-serif;
     background-color: rgb(161, 163, 165);
-    background-image: url('../img/bg.png');
+    background: url('../img/bg.png') no-repeat center center fixed;
     background-size: cover;
 
 }
