--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -53,7 +53,7 @@ button {
 
 }
 
-button:hover {
+button:not(:disabled):hover {
 
     box-shadow: inset 0 0 100px 100px rgba(50, 0, 0, 0.1);
 
@@ -67,6 +67,12 @@ button:hover {
 
     width: 10rem;
     filter: opacity(.5)
+
+}
+
+#has-room {
+
+    display: none;
 
 }
 
@@ -193,6 +199,15 @@ button:hover {
     font-family: inherit;
 
     width: 100%;
+
+}
+
+button:disabled {
+
+    filter: grayscale(100%) opacity(50%);
+    -moz-filter: grayscale(100%) opacity(50%);
+    -webkit-filter: grayscale(100%) opacity(50%);
+    cursor: default;
 
 }
 
