--- a/public/css/match.css
+++ b/public/css/match.css
@@ -11,8 +11,16 @@ body {
     background-color: black;
     background: url('../img/forest-bg.png');
     background-size: cover;
-    image-rendering: crisp-edges;
-    cursor: url('../img/cursors/idle.png'), auto;	
+    cursor: url('../img/cursors/idle.png'), auto;
+
+    image-rendering:optimizeSpeed;             /* Legal fallback */
+    image-rendering:-moz-crisp-edges;          /* Firefox        */
+    image-rendering:-o-crisp-edges;            /* Opera          */
+    image-rendering:-webkit-optimize-contrast; /* Safari         */
+    image-rendering:optimize-contrast;         /* CSS3 Proposed  */
+    image-rendering:crisp-edges;               /* CSS4 Proposed  */
+    image-rendering:pixelated;                 /* CSS4 Proposed  */
+    -ms-interpolation-mode:nearest-neighbor;   /* IE8+           */
 
 }
 
